--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -94,7 +94,7 @@
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-black"
-                     href="/assets/Surgeon.pdf"
+                     href="https://arxiv.org/abs/2108.10420"
                      target="_blank">Jointly Learnable Data Augmentations for Self-Supervised GNNs</a></h3>
               </div>
               <p class="item-date-loc">
