--- a/src/app/reading-group/reading-group.component.scss
+++ b/src/app/reading-group/reading-group.component.scss
@@ -12,8 +12,6 @@
   overflow: hidden;
 }
 
-.submit-button{
-}
 
 .responsive iframe {
   position: absolute;
@@ -30,7 +28,7 @@
 }
 
 .video {
-  padding-bottom: 56.25%;  /* or 75% depending upon the type of video you have */
+  padding-bottom: 56.25%; /* or 75% depending upon the type of video you have */
 }
 
 .video-container {
@@ -76,65 +74,67 @@ h3 {
 }
 
 .link-style-black:hover {
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .link-style-green, .link-style-green:visited {
   color: var(--color-primary);
   font-weight: 500;
-	text-decoration: none;
-	position: relative;
-	&:after {
-		content: '';
-		height: 2px;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 0%;
-		background: var(--color-primary);
-		transition: 0.2s;
+  text-decoration: none;
+  position: relative;
+
+  &:after {
+    content: '';
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    background: var(--color-primary);
+    transition: 0.2s;
     z-index: 1111;
-	}
+  }
 
-	&:hover:after {
-		width: 100%;
-	}
+  &:hover:after {
+    width: 100%;
+  }
 
-	&.block {
-		display: block;
-		padding: 0.5em;
+  &.block {
+    display: block;
+    padding: 0.5em;
 
-		&:hover {
-		}
-	}
+    &:hover {
+    }
+  }
 }
 
 .link-style-black, .link-style-black:visited {
-	text-decoration: none;
-	position: relative;
-	&:after {
-		content: '';
-		height: 2px;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 0%;
-		background: var(--color-primary);
-		transition: 0.2s;
+  text-decoration: none;
+  position: relative;
+
+  &:after {
+    content: '';
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    background: var(--color-primary);
+    transition: 0.2s;
     z-index: 1111;
-	}
+  }
 
-	&:hover:after {
-		width: 100%;
-	}
+  &:hover:after {
+    width: 100%;
+  }
 
-	&.block {
-		display: block;
-		padding: 0.5em;
+  &.block {
+    display: block;
+    padding: 0.5em;
 
-		&:hover {
-		}
-	}
+    &:hover {
+    }
+  }
 }
 
 
@@ -142,8 +142,9 @@ h3 {
   filter: grayscale(0%);
   -webkit-filter: grayscale(0%);
 }
+
 .previewable-image:hover {
-  cursor:pointer;
+  cursor: pointer;
   filter: grayscale(40%);
   -webkit-filter: grayscale(40%);
   transform: scale(1.01);
@@ -152,37 +153,38 @@ h3 {
 }
 
 .link-style-orange:hover {
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .link-style-orange, .link-style-orange:visited {
-	text-decoration: none;
-	position: relative;
+  text-decoration: none;
+  position: relative;
   font-weight: 500;
   color: var(--color-accent);
-	&:after {
-		content: '';
-		height: 2px;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 0%;
-		background: var(--color-accent);
-		transition: 0.2s;
+
+  &:after {
+    content: '';
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    background: var(--color-accent);
+    transition: 0.2s;
     z-index: 1111;
-	}
+  }
 
-	&:hover:after {
-		width: 100%;
-	}
+  &:hover:after {
+    width: 100%;
+  }
 
-	&.block {
-		display: block;
-		padding: 0.5em;
+  &.block {
+    display: block;
+    padding: 0.5em;
 
-		&:hover {
-		}
-	}
+    &:hover {
+    }
+  }
 }
 
 
@@ -234,17 +236,6 @@ h3 {
   }
 }
 
-.mat-button {
-  font-size: 18px;
-  transition-duration: 0.2s;
-  color: var(--color-primary);
-}
-
-.mat-button:hover {
-  transition-duration: 0.2s;
-  background-color: var(--color-primary);
-  color: white;
-}
 
 .item-content {
   margin: 0;
@@ -266,6 +257,7 @@ h3 {
 .item-date-loc {
   margin: 0;
 }
+
 .paragraph {
   margin-bottom: 5px;
 }
@@ -292,3 +284,74 @@ h3 {
   }
 }
 
+.hidden {
+  display: none
+}
+
+.visible {
+  display: block
+}
+
+.success-message {
+  border: 1px solid #D8D8D8;
+  border-radius: 5px;
+  font-size: 11px;
+  background-color: rgb(236, 255, 216);
+  color: green;
+  text-align: center;
+  margin-top: 8px;
+}
+
+.failed-message {
+  border: 1px solid #D8D8D8;
+  border-radius: 5px;
+  font-size: 11px;
+  background-color: #FFCCCC;
+  color: #3a3a3a;
+  text-align: center;
+  margin-top: 8px;
+}
+
+form.contact {
+  max-width: 200px;
+  width: 200px;
+}
+
+.margin-left {
+  margin-left: 10px;
+}
+
+.submit-button {
+  transition-duration: 0.2s;
+  color: var(--color-primary);
+  background-color: white;
+  border: 1px solid var(--color-primary);
+  transition: 0.4s;
+  width: 100%;
+}
+
+.submit-button:hover:enabled {
+  transition-duration: 0.2s;
+  background-color: var(--color-primary);
+  color: white;
+}
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+}
+
+.spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  border-top-color: var(--color-primary);
+  animation: spinner .8s linear infinite;
+}
